syntax = "proto3";

option go_package = "Go/bazel/GreeterService";


message HelloRequest{
  string name = 1;
}
message HelloResponse{
  string name = 1;
  string age = 2;
}

service GreeterService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}